project card: link spacing, fixed tooltips; nav btn press animation

--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -64,6 +64,15 @@
     transform: translateY(-2px);
   }
 
+  .navigation li:active {
+    /* box-shadow: inset 2px 2px 2px 1px rgba(255, 255, 255, 0.1), 
+                inset -2px -2px 2px 1px rgba(0, 0, 0, 0.2); */
+    transform: translateY(2px);
+    transform: translateX(2px);
+    box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0.1), 
+                -2px -2px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+
   /* .navigation a {
     display: inline-block;
     padding: 10px 20px;
